# ai_for_finance_hack_final

./: README.md  docker-compose.yaml  run_tests.sh  test_api.py
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/src/: config.py  main.py  setup_logger.py
backend/src/db/: base.py  models.py
backend/src/db/repositories/: base_repo.py  chat_repo.py  chunk_repo.py  document_repo.py  message_repo.py  prompt_repo.py  user_repo.py
backend/src/internal/: dependencies.py  security.py
backend/src/internal/routers/: admin.py  auth_router.py  chat_router.py  document_router.py
backend/src/internal/schemas/: auth.py  chat.py  documents.py
backend/src/services/: document_service.py
backend/src/services/document_processing/: __init__.py  chunk_splitter.py  models.py  parser.py  pipeline.py  vector_manager.py
backend/src/services/embeddings/: __init__.py  openrouter.py
backend/src/services/qdrant/: __init__.py  vector_store.py
backend/src/services/rag/: CONFIGURATION.md  __init__.py  agent.py  configuration.py  context_manager.py  external_clients.py  fusion_planner.py  openrouter_chat.py  prompt_registry.py  tool_executor.py  tool_registry.py
backend/src/services/rag/prompt_storage/: fusion_ru.txt  orchestrator_ru.txt  system_ru.txt
backend/src/services/s3/: __init__.py  client.py  s3_test.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  backend-openapi.json  hero.ts  middleware.ts  next.config.ts  orval.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
knowledge_base/: kb_etl.py
(+63 files in other folders)
